# mcp-mastery

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
1_Basic_MCP_Server/Integrating_with_Antigravity/: mcp_config_http.json  mcp_config_stdio.json
1_Basic_MCP_Server/Integrating_with_Antigravity/servers/: server_news.py  server_weather.py
1_Basic_MCP_Server/demo/: client.py  server.py
1_Basic_MCP_Server/mcp_use_framework/: agentic_client.py  server.py
1_Basic_MCP_Server/mcp_use_framework_config_file/: agentic_client_advanced.py  mcp.json  mcp_streamable_http.json
1_Basic_MCP_Server/mcp_use_framework_config_file/servers/: server_news.py  server_weather.py
1_Basic_MCP_Server/weather/: client.py  server.py  test_weather.py
2_MCPServer_Data_Analysis/data/: support_tickets_data.xlsx
2_MCPServer_Data_Analysis/prompts/: excel.md
3_Tools_Resources_Prompts/job_search/: client.py  mcp.json  server.py
4_Carbon_Intensity_MCP/: README.md  agent.py  carbon_mcp_server.py
5_MCP_RAG/: server.py
