[project]
name = "mcp-mastery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
    "ipython>=9.10.0",
    "langchain-chroma>=1.1.0",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.1",
    "mcp-use>=1.6.0",
    "pydantic-ai>=1.78.0",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.4.0",
]
